--- a/manifest.plist
+++ b/manifest.plist
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.rigsec.RIGBOX</string>
+				<string>com.watchdata.RIGBOX</string>
 				<key>bundle-version</key>
 				<string>1.0.1</string>
 				<key>kind</key>
